@@ -1,7 +1,7 @@
 Package: HiddenMarkov
 Title: Hidden Markov Models
-Version: 1.8-7
-Date: 2016-08-29
+Version: 1.8-8
+Date: 2017-06-17
 Author: David Harte
 Maintainer: David Harte <d.s.harte@gmail.com>
 Description: Contains functions for the analysis of Discrete Time Hidden Markov Models, Markov Modulated GLMs and the Markov Modulated Poisson Process. It includes functions for simulation, parameter estimation, and the Viterbi algorithm. See the topic "HiddenMarkov" for an introduction to the package, and "Change Log" for a list of recent changes. The algorithms are based of those of Walter Zucchini.
@@ -9,6 +9,6 @@ Suggests: parallel
 License: GPL (>= 2)
 URL: ftp://ftp.gns.cri.nz/pub/davidh/sslib/r-repo/
 NeedsCompilation: yes
-Packaged: 2016-08-29 04:26:46 UTC; davidh
+Packaged: 2017-06-17 00:07:17 UTC; david
 Repository: CRAN
-Date/Publication: 2016-08-30 07:48:00
+Date/Publication: 2017-06-17 08:46:46 UTC
